src/components/Intro/Intro.styles.scss
.intro {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: calc(100vh - 3rem);
  padding: var(--spacing-16) var(--spacing-8);
  background: linear-gradient(
    180deg,
    #3d94b7 -15rem,
    #3a6e83,
    #365e70,
    #324e5b,
    #2d3f48,
    #283237,
    #24282a,
    #202122,
    #1f1f1f
  );

  h1 {
    margin: 0 0 1rem 0;
    z-index: 1;
  }

  h2 {
    font-size: var(--fontSize-5);
    z-index: 1;
  }

  p {
    z-index: 1;
  }
}

@media screen and (min-width: 512px) {
  .intro {
    padding: var(--spacing-16);
  }

  h1 {
    font-size: 3.5rem;
  }

  h2 {
    font-size: var(--fontSize-6);
  }
}

@media screen and (min-width: 1920px) {
  .intro {
    padding: var(--spacing-24);
  }
}

